--- a/assets/scss/base/_colors.scss
+++ b/assets/scss/base/_colors.scss
@@ -1,5 +1,5 @@
 // Color Pallete
-$color-primary   : #E1A56B;
+$color-primary   : #ffa100;
 $color-secondary : #44465F;
 $color-tertiary  : #537987;
 $color-danger    : #FF0000;
