--- a/assets/css/layouts/cta.css
+++ b/assets/css/layouts/cta.css
@@ -18,7 +18,7 @@ textarea {
   width: 100%;
   padding: 10px 10px;
   border-radius: 10px;
-  border: solid 2px #E1A56B;
+  border: solid 2px #ffa100;
   font-size: 14px;
   font-weight: 400;
   color: #44465F;
@@ -26,7 +26,7 @@ textarea {
   resize: none;
 }
 textarea:focus {
-  border: solid 2px #E1A56B;
+  border: solid 2px #ffa100;
 }
 
 [data-aos] {
@@ -47,7 +47,7 @@ textarea:focus {
   font-size: 36px;
   font-weight: 700;
   margin-bottom: 20px;
-  color: #E1A56B;
+  color: #ffa100;
   font-family: "Croissant One", cursive;
 }
 #call-to-action h1 strong {
@@ -60,8 +60,8 @@ textarea:focus {
   margin-bottom: 20px;
 }
 #call-to-action .btn {
-  background-color: #E1A56B;
-  border: 2px solid #E1A56B;
+  background-color: #ffa100;
+  border: 2px solid #ffa100;
   color: #ffffff;
   font-size: 14px;
   font-weight: 500;
@@ -72,13 +72,13 @@ textarea:focus {
 }
 #call-to-action .btn:hover {
   background-color: #ffffff;
-  color: #E1A56B;
-  border: 2px solid #E1A56B;
+  color: #ffa100;
+  border: 2px solid #ffa100;
 }
 #call-to-action .btn:hover {
   background-color: #ffffff;
-  border: solid 2px #E1A56B;
-  color: #E1A56B;
+  border: solid 2px #ffa100;
+  color: #ffa100;
 }
 
 /*# sourceMappingURL=cta.css.map */
