--- a/assets/css/layouts/hero.css
+++ b/assets/css/layouts/hero.css
@@ -18,7 +18,7 @@ textarea {
   width: 100%;
   padding: 10px 10px;
   border-radius: 10px;
-  border: solid 2px #E1A56B;
+  border: solid 2px #ffa100;
   font-size: 14px;
   font-weight: 400;
   color: #44465F;
@@ -26,7 +26,7 @@ textarea {
   resize: none;
 }
 textarea:focus {
-  border: solid 2px #E1A56B;
+  border: solid 2px #ffa100;
 }
 
 [data-aos] {
@@ -42,13 +42,13 @@ textarea:focus {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  margin-top: 70px;
+  margin-top: 50px;
 }
 
 @media (max-width: 767px) {
   .hero {
-    background-image: url("../../../assets/img/others/bg-mobile-unicorn.png") !important;
-    height: 950px;
+    background-image: url("../../../assets/img/others/bg-mobile-unicorn2.png") !important;
+    height: 750px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 991px) {
