--- a/assets/css/layouts/kritiksaran.css
+++ b/assets/css/layouts/kritiksaran.css
@@ -18,7 +18,7 @@ textarea {
   width: 100%;
   padding: 10px 10px;
   border-radius: 10px;
-  border: solid 2px #E1A56B;
+  border: solid 2px #ffa100;
   font-size: 14px;
   font-weight: 400;
   color: #44465F;
@@ -26,7 +26,7 @@ textarea {
   resize: none;
 }
 textarea:focus {
-  border: solid 2px #E1A56B;
+  border: solid 2px #ffa100;
 }
 
 [data-aos] {
@@ -44,7 +44,7 @@ textarea:focus {
   font-size: 36px;
   font-weight: 700;
   margin-bottom: 20px;
-  color: #E1A56B;
+  color: #ffa100;
   font-family: "Croissant One", cursive;
 }
 #kritiksaran p {
@@ -54,7 +54,7 @@ textarea:focus {
   margin-bottom: 20px;
 }
 #kritiksaran .btn {
-  background-color: #E1A56B;
+  background-color: #ffa100;
   color: #ffffff;
   border-radius: 10px;
   border: solid 2px #ffffff;
@@ -65,8 +65,8 @@ textarea:focus {
 }
 #kritiksaran .btn:hover {
   background-color: #ffffff;
-  border: solid 2px #E1A56B;
-  color: #E1A56B;
+  border: solid 2px #ffa100;
+  color: #ffa100;
 }
 #kritiksaran .form-group {
   margin-bottom: 20px;
@@ -90,7 +90,7 @@ textarea:focus {
 }
 #kritiksaran .form-group input:focus,
 #kritiksaran .form-group textarea:focus {
-  border: solid 2px #E1A56B;
+  border: solid 2px #ffa100;
 }
 
 .whatsapp-float {
