--- a/assets/css/layouts/products.css
+++ b/assets/css/layouts/products.css
@@ -136,4 +136,60 @@ textarea:focus {
   color: #ffffff !important;
 }
 
+.price-section {
+  background: #fafafa;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.varian-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.varian-list li {
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.varian-name {
+  font-weight: 500;
+}
+
+.price {
+  font-size: 15px;
+  font-weight: bold;
+  color: #333;
+}
+
+.price.highlight {
+  color: #d9534f; /* Warna merah untuk menarik perhatian */
+}
+
+.price.combo {
+  color: #5cb85c; /* Warna hijau untuk combo menarik */
+  /* font-style: italic; */
+}
+
+/* Tombol Detail Produk */
+.btn-detail-product {
+  width: 100%;
+  background-color: #ff6600;
+  color: #fff;
+  border: none;
+  padding: 8px 12px;
+  font-size: 14px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.btn-detail-product:hover {
+  background-color: #e55b00;
+}
 /*# sourceMappingURL=products.css.map */
