--- a/assets/css/layouts/products.css
+++ b/assets/css/layouts/products.css
@@ -52,7 +52,7 @@ textarea:focus {
   font-size: 36px;
   font-weight: 700;
   margin-bottom: 20px;
-  color: #ffffff;
+  color: #ffa100;
   font-family: "Croissant One", cursive;
 }
 #products .card {
